--- a/3-Neural_Network/docs/IA048-Atividade_Redes_Neurais-Gabriel_Toffanetto/references.bib
+++ b/3-Neural_Network/docs/IA048-Atividade_Redes_Neurais-Gabriel_Toffanetto/references.bib
@@ -13,3 +13,12 @@
 	publisher={arXiv: 1705.08292},
 	primaryClass={stat.ML}
 }
+@misc{huang2018densely,
+	title={Densely Connected Convolutional Networks}, 
+	author={Gao Huang and Zhuang Liu and Laurens van der Maaten and Kilian Q. Weinberger},
+	year={2018},
+	eprint={1608.06993},
+	archivePrefix={arXiv},
+	publisher={arXiv: 1608.06993},
+	primaryClass={cs.CV}
+}
