--- a/3-Neural_Network/src/cnn_deep.ipynb
+++ b/3-Neural_Network/src/cnn_deep.ipynb
@@ -1059,7 +1059,7 @@
     "loss, accuracy = model.evaluate(X_test,y_test)\n",
     "\n",
     "print('\\n=========================')\n",
-    "print('accuracy on training data = '+str(accuracy))\n",
+    "print('accuracy on test data = '+str(accuracy))\n",
     "print('=========================\\n')\n"
    ]
   },
